<resources>
    <string name="app_name">ChoresApp</string>
    <string name="enter_chore">Enter a Chore</string>
    <string name="assignTo">Assign to …</string>
    <string name="assignedBy">Assigned by …</string>
    <string name="saveChore">Save Chore</string>
    <string name="image_description">Icon of a Chore</string>
    <string name="menu_title">Add a chore</string>
    <string name="chore_name">Chore Name</string>
    <string name="date_created">date: 12 April 2017</string>
</resources>