<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:padding="0.1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/imageViewID"
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_def_app_icon"/>

            <TextView
                android:id="@+id/listChoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageViewID"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="149dp"
                android:layout_toEndOf="@id/imageViewID"
                android:text="@string/chore_name"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/listAssignedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageViewID"
                android:layout_below="@id/listChoreName"
                android:text="@string/assignedBy" />
<!--            android:layout_toRightOf="@id/imageViewID"-->

            <TextView
                android:id="@+id/listAssignedTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageViewID"
                android:layout_below="@id/listAssignedBy"
                android:text="@string/assignTo"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/listDate"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageViewID"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/listAssignedBy"
                android:text="@string/date_created"
                tools:ignore="RelativeOverlap" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/listDate"
                android:layout_margin="10dp"
                >


                <Button
                    android:id="@+id/listEditButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/listDeleteButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@android:drawable/ic_delete" />

            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>